# MH

./: LICENSE
P2/AGE_QAP/data/Resultados/: resultados_AGE_OX.data  resultados_AGE_POS.data
P2/AGE_QAP/src/: main_AGE_QAP_OX.cpp  main_AGE_QAP_POS.cpp
P2/AM_QAP/src/: AGG_QAP_Posicion.hpp
P2/software/AGE_QAP/: CMakeLists.txt
P2/software/AGE_QAP/paradiseoFinder/module/: FindParadiseo.cmake
P2/software/AGG_QAP/: CMakeLists.txt
P2/software/AGG_QAP/data/Resultados/: resultados_AGG_OX.data
P2/software/AGG_QAP/src/: QAP.hpp  main_AGG_QAP_OX.cpp  main_AGG_QAP_POS.cpp  modulo_io.h
P2/software/AM_QAP/: CMakeLists.txt
P2/software/AM_QAP/data/resultados/: resultados_AM_V1.data  resultados_AM_V2.data  resultados_AM_V3.data
P2/software/AM_QAP/paradiseoFinder/module/: FindParadiseo.cmake
P2/software/AM_QAP/src/: AGG_QAP_OX.hpp  LS_QAP.cpp  main_Memetico_QAP.cpp
